--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <input id = "okBtn" type= "button" onclick="toggleVisability('Message-Container')" value ="Cool!"/>
     </div>
     </div>
+    <div class ="container">
+
+        </div>
 
     <br>
     <div id="menu">
