--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA CHAMPIONSHIP MAZE</title>
-    <link rel="stylesheet" href ="style.css"
+  <meta charset="utf-8">
+
 </head>
-<body>
-
-    <div id = "page">
-        <div id ="Message-Container">
-            <h1>Congratulations!</h1>
-            <p> YOU ARE A CHAMPION</p>
-            <p id="moves"></p>
-            <input id = "okBtn" type= "button" onclick="toggleVisability('Message-Container')" value ="Cool!"/>
-    </div>
-    </div>
-    <div class ="container">
-
+  <body>
+      <link rel="stylesheet" type="text/css" href="style.css">
+    <div id="gradient"></div>
+    <div id="page">
+      <div id="Message-Container">
+        <div id="message">
+          <h1>Congratulations!</h1>
+          <p>You are a champion!</p>
+          <p id="moves"></p>
+          <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Reset" />
         </div>
-
-    <br>
-    <div id="menu">
-      <div class="custom-select">
-        <select id ="diffSelect"
-
-        
-</body>
+      </div>
+      <div id="menu">
+        <div class="custom-select">
+          <select id="diffSelect">
+                    <option value="10">Easy</option>
+                    <option value="15">Medium</option>
+                    <option value="25">Hard</option>
+                    <option value="38">Extreme</option>                                      
+                </select>
+        </div>
+        <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
+      </div>
+      <div id="view">
+        <div id="mazeContainer">
+          <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
+  
+    
+  </body>
 </html>
