--- a/index.html
+++ b/index.html
@@ -32,10 +32,29 @@
         </div>
       </div>
     </div>
+    <div class ="main-area">
+        <div class ="circles">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
+    <audio controls loop autoplay>
+      <source src="song.mp3" type="audio/mp3"> 
+    </audio>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
-  
+    
+   
     
   </body>
 </html>
